Changes in frontier.html and php

--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -879,7 +879,7 @@
           <form action="upload.php" method="POST" enctype="multipart/form-data">
             Select image to upload:
             <input type="file" name="fileToUpload" id="fileToUpload">
-            <input type="submit" value="Upload Image" name="submit">
+            <input type="submit" value="Upload Python File" name="submit">
           </form>
           
           
