--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -107,6 +107,9 @@
     <!-- Following are some text describing how we are interact with the privacy frontier. -->
 
     <h1 class="text-left">Privacy Accuracy Frontier</h1>
+
+        <p>This is another test for git commands</p>
+        
         <p class="text-left" style= "background-color: PowderBlue"> Given a dataset and a privacy level (epsilon), which algorithm introduce the least error?
         </p>
 
