--- a/frontend/finding.html
+++ b/frontend/finding.html
@@ -28,9 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">DPGraph</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="problem.html">Problem Statement</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="frontier.html">Accuracy Frontier</a>
           </li>
