--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -344,6 +344,7 @@
               }
               console.log(data);
               var layout = {
+                dragmode: "pan",
                 autosize: false,
                 width: 300,
                 height: 300,
@@ -821,12 +822,13 @@
             var dp_chosen = document.getElementById("Degree Type").value;
             if (temp_data == 2) {
               dataChosen = 'CIT';
-            } else if (temp_data == 3) {
+            } 
+            else if (temp_data == 3) {
               dataChosen = 'DBLP';
             } 
-            else if(temp_data == 1){
+            else if(temp_data == 1) {
               dataChosen = 'FACEBOOK';
-            } else if(temp_data == 4){
+            } else if(temp_data == 4) {
               dataChosen = 'WIKI';
             } else if(temp_data == 5){
               dataChosen = 'TOYDATA';
@@ -837,9 +839,13 @@
             
             var lookingname = "lookingSGC";
             // This part draws the frontier 
-            if(dp_chosen == 2) lookingname = lookingname+"edge"
+            if (dp_chosen == 2) {
+              lookingname = lookingname + "edge";
+            }
             lookingname = lookingname + ".csv"       
             Plotly.d3.csv(lookingname, (err, rows)=>{
+              console.log("In this plotting function");
+              console.log(dp_chosen);
               var l = rows.filter(r=>r.algo)
               algoindex = l.map(r => r.algo)
               edgealgoindex = l.map(r => r.algo);
