--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -131,7 +131,7 @@
         <option value = "4">Subgraph Counting_4kclique</option>
         <option value = "3">Subgraph Counting_3kstar</option>
         <option value = "5">Subgraph Counting_2ktriangle</option>
-        <option value = "2">Subgraph Counting_0ktriangle</option>
+        <option value = "2">Subgraph Counting_triangle</option>
         </select>
 
         <select id = "Dataset" onchange = "frontierFn()"> 
