--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -74,16 +74,8 @@
           <li class="nav-item">
             <a class="nav-link" href="performance.html">Performance Frontier</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Empirical Findings
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="finding.html">Finding Overview</a>
-              <a class="dropdown-item" href="#">Competitive Algorithm</a>
-              <a class="dropdown-item" href="#">Effect of Data Shape</a>
-              <a class="dropdown-item" href="#">Comparison Against Baseline</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="finding.html">Empirical Findings</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
