--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -779,6 +779,7 @@
             var trace2 = {}
             var data = [trace1, trace2]
             var layout = {
+              dragmode: "pan",
               autosize: false,
               width: 250,
               height: 300,
